--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
