--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxplot = sns.boxplot(data=data)"
+    "boxplot = sns.boxplot(data=data, x)"
    ]
   },
   {
