--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boxplot = sns.boxplot(data=data)\n",
+    "\n",
+    "boxplot.set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot')"
+   ]
   },
   {
    "cell_type": "markdown",
