Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,9 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxplot = sns.boxplot(data=data)\n",
-    "\n",
-    "boxplot.set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot')"
+    "boxplot = sns.boxplot(data=data).set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot')"
    ]
   },
   {
