Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "boxplot = set_style()"
    ]
   },
   {
