Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "boxplot = set_style()"
+    "boxplot = set_style('darkgrid')\n"
    ]
   },
   {
