--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "boxplot = set_style('darkgrid')\n"
+    "boxplot = boxplot.set_style('darkgrid')\n"
    ]
   },
   {
