Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "boxplot = boxplot.set_style('darkgrid')\n"
+    "boxplot = sns.set_style('darkgrid')\n"
    ]
   },
   {
