Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,6 +225,7 @@
    ],
    "source": [
     "# Your code here\n",
+    "sns.\n",
     "boxplot = sns.boxplot(data=data).set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot').set_style(style='darkgrid')\n"
    ]
   },
