Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,8 +225,8 @@
    ],
    "source": [
     "# Your code here\n",
-    "sns.\n",
-    "boxplot = sns.boxplot(data=data).set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot').set_style(style='darkgrid')\n"
+    "sns.set_style(style='darkgrid')\n",
+    "boxplot = sns.boxplot(data=data).set(xlabel='X Label', ylabel='Y Label', title='Example Boxplot').set_style(style='da\n"
    ]
   },
   {
