Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "sns.s"
    ]
   },
   {
