Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,13 +236,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Text(17.200000000000003, 0.5, 'Y Label'),\n",
+       " Text(0.5, 17.200000000000003, 'X Label'),\n",
+       " Text(0.5, 1, 'Example Boxplot')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "sns.set_context('poster')"
+    "sns.set_context(context='poster')\n",
+    "boxplot"
    ]
   },
   {
