Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,8 +255,7 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "sns.set_context(context='poster')\n",
-    "boxplot"
+    "sns.set_context(context='poster')\n"
    ]
   },
   {
