Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "sns.set_context(context='poster')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -247,15 +258,13 @@
        " Text(0.5, 1, 'Example Boxplot')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "sns.set_context(context='poster')\n"
+    "print(boxplot"
    ]
   },
   {
