Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -258,13 +258,13 @@
        " Text(0.5, 1, 'Example Boxplot')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(boxplot"
+    "boxplot"
    ]
   },
   {
