--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sns.set_context()"
    ]
   },
   {
