--- a/index.ipynb
+++ b/index.ipynb
@@ -282,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "sns.set_context()"
+    "sns.set_context(context='notebook')"
    ]
   },
   {
