--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "sns.lmplot(x='total_bill', y='tip', data = tips, )"
+    "sns.lmplot(x = 'total_bill', y = 'tip', data = tips, hue = 'smoker')"
    ]
   },
   {
